--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
   --background: #f5f7fa;
   --foreground: #264653;
   --basecolor: #D9D9D9;
-  --foreground-light: #4f8899;
+  --foreground-light: #2e5461;
   --foreground-light-text: #ffffff;
   --animal-card-info : rgb(217, 217, 217, 0.6)
 }
